# cmake-templates

./: .gitignore  README.md
Test1/: CMakeLists.txt  Makefile  main.cc
Test2/: CMakeLists.txt  Calc.cc  Makefile  main.cc
Test3/: CMakeLists.txt  Makefile  main.cc
Test3/calc/: CMakeLists.txt  Makefile
Test4/: CMakeLists.txt  Makefile  TutorialConfig.h
Test4/calc/: Makefile
Test5/: CMakeLists.txt  Makefile  main.cc
Test5/calc/: CMakeLists.txt  Makefile
Test6/: CMakeLists.txt  Makefile  main.cc
